fix overflow and fix comment link events

--- a/symfony/assets/css/style.css
+++ b/symfony/assets/css/style.css
@@ -1224,6 +1224,7 @@ main {
 	font-size: 16px;
 	line-height: 24px;
 	margin-bottom: 20px;
+	overflow: hidden;
 }
 .job_descp > p a {
 	color: #e44d3a;
@@ -1552,6 +1553,7 @@ main {
 .comment-sec {
 	float: left;
 	width: 100%;
+	overflow: hidden;
 }
 .comment-sec ul {
 	float: left;
